plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.dotran.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {

	implementation "org.springframework.boot:spring-boot-starter-data-jpa"
	implementation "jakarta.persistence:jakarta.persistence-api"
	implementation "org.springframework.boot:spring-boot-starter-web"
	implementation "org.springframework.boot:spring-boot-configuration-processor"
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation("org.hibernate:hibernate-validator:8.0.3.Final")
	implementation 'org.mapstruct:mapstruct:1.6.3'
	implementation 'org.projectlombok:lombok'
	implementation("org.apache.commons:commons-lang3:3.18.0")

	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// AWS
	implementation platform("software.amazon.awssdk:bom:2.31.76")

	implementation "software.amazon.awssdk:dynamodb"
	implementation "software.amazon.awssdk:dynamodb-enhanced"

	// Swagger
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0") {
		exclude group: "org.apache.commons", module: "commons-lang3"
	}

	implementation 'org.postgresql:postgresql'

	// Flyway
	implementation 'org.flywaydb:flyway-core'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
	annotationProcessor "org.hibernate.orm:hibernate-jpamodelgen:6.4.0.Final"

	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
